--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -82,6 +82,8 @@
         "__tree": "cpp",
         "__tuple": "cpp",
         "ios": "cpp",
-        "locale": "cpp"
+        "locale": "cpp",
+        "map": "cpp",
+        "variant": "cpp"
     }
 }
